some tmux styling

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,16 @@
+# Change terminal identification
 set -g default-terminal "screen-256color"
+
+# Enable mouse support
 set -g mode-mouse on
+
+# Change action sequence from C-b to C-a
+set-option -g prefix C-a
+
+# Set status bar style
+set -g status-bg colour232
+set -g status-fg white
+set-window-option -g window-status-current-bg colour234
+
+# Enable cool terminal native scrolling
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
