some linux tweaks

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 # Change terminal identification
 set -g default-terminal "screen-256color"
 
-# Enable mouse support
-set -g mode-mouse on
+# Disable mouse support
+set -g mode-mouse off
 
 # Change action sequence from C-b to C-a
 set-option -g prefix C-a
