--- a/.gitmodules
+++ b/.gitmodules
@@ -1,48 +1,45 @@
-[submodule "prezto/zprezto"]
-	path = prezto/zprezto
-	url = https://github.com/sorin-ionescu/prezto.git
-[submodule "vim/vim/bundle/a.vim"]
-	path = vim/vim/bundle/a.vim
-	url = https://github.com/vim-scripts/a.vim.git
-[submodule "vim/vim/bundle/ctrlp.vim"]
-	path = vim/vim/bundle/ctrlp.vim
-	url = https://github.com/kien/ctrlp.vim.git
-[submodule "vim/vim/bundle/pyflakes-vim"]
-	path = vim/vim/bundle/pyflakes-vim
-	url = https://github.com/kevinw/pyflakes-vim.git
-[submodule "vim/vim/bundle/tcomment_vim"]
-	path = vim/vim/bundle/tcomment_vim
-	url = https://github.com/tomtom/tcomment_vim.git
-[submodule "vim/vim/bundle/vim-fugitive"]
-	path = vim/vim/bundle/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive.git
-[submodule "vim/vim/bundle/vim-gitgutter"]
-	path = vim/vim/bundle/vim-gitgutter
-	url = https://github.com/airblade/vim-gitgutter.git
-[submodule "vim/vim/bundle/vim-puppet"]
-	path = vim/vim/bundle/vim-puppet
-	url = https://github.com/rodjek/vim-puppet.git
-[submodule "vim/vim/bundle/vim-markdown"]
-    path = vim/vim/bundle/vim-markdown
+[submodule "a.vim"]
+    path = vim/.vim/bundle/a.vim
+    url = https://github.com/vim-scripts/a.vim.git
+[submodule "ctrlp.vim"]
+    path = vim/.vim/bundle/ctrlp.vim
+    url = https://github.com/kien/ctrlp.vim.git
+[submodule "pyflakes-vim"]
+    path = vim/.vim/bundle/pyflakes-vim
+    url = https://github.com/kevinw/pyflakes-vim.git
+[submodule "tcomment_vim"]
+    path = vim/.vim/bundle/tcomment_vim
+    url = https://github.com/tomtom/tcomment_vim.git
+[submodule "vim-fugitive"]
+    path = vim/.vim/bundle/vim-fugitive
+    url = https://github.com/tpope/vim-fugitive.git
+[submodule "vim-gitgutter"]
+    path = vim/.vim/bundle/vim-gitgutter
+    url = https://github.com/airblade/vim-gitgutter.git
+[submodule "vim-puppet"]
+    path = vim/.vim/bundle/vim-puppet
+    url = https://github.com/rodjek/vim-puppet.git
+[submodule "vim-markdown"]
+    path = vim/.vim/bundle/vim-markdown
     url = https://github.com/plasticboy/vim-markdown.git
-[submodule "vim/vim/bundle/vim-qml"]
-    path = vim/vim/bundle/vim-qml
+[submodule "vim-qml"]
+    path = vim/.vim/bundle/vim-qml
     url = https://github.com/peterhoeg/vim-qml.git
-[submodule "vim/vim/bundle/cpp-vim"]
-    path = vim/vim/bundle/cpp-vim
+[submodule "cpp-vim"]
+    path = vim/.vim/bundle/cpp-vim
     url = https://github.com/vim-jp/cpp-vim.git
-[submodule "vim/vim/bundle/vim-glsl"]
-    path = vim/vim/bundle/vim-glsl
+[submodule "vim-glsl"]
+    path = vim/.vim/bundle/vim-glsl
     url = https://github.com/tikhomirov/vim-glsl.git
-[submodule "vim/vim/bundle/smyck-vim"]
-    path = vim/vim/bundle/smyck-vim
+[submodule "smyck-vim"]
+    path = vim/.vim/bundle/smyck-vim
     url = https://github.com/brendonrapp/smyck-vim.git
-[submodule "vim/vim/bundle/vim-fish"]
-    path = vim/vim/bundle/vim-fish
+[submodule "vim-fish"]
+    path = vim/.vim/bundle/vim-fish
     url = https://github.com/dag/vim-fish.git
-[submodule "vim/vim/bundle/rust.vim"]
-    path = vim/vim/bundle/rust.vim
+[submodule "rust.vim"]
+    path = vim/.vim/bundle/rust.vim
     url = https://github.com/wting/rust.vim.git
-[submodule "vim/vim/bundle/vim-toml"]
-    path = vim/vim/bundle/vim-toml
+[submodule "vim-toml"]
+    path = vim/.vim/bundle/vim-toml
     url = https://github.com/cespare/vim-toml.git
