--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "vim-toml"]
     path = vim/.vim/bundle/vim-toml
     url = https://github.com/cespare/vim-toml.git
+[submodule "thrift.vim"]
+    path = vim/.vim/bundle/thrift.vim
+    url = https://github.com/solarnz/thrift.vim.git
