--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "ctrlp.vim"]
     path = vim/.vim/bundle/ctrlp.vim
     url = https://github.com/kien/ctrlp.vim.git
+[submodule "dash.vim"]
+    path = vim/.vim/bundle/dash.vim
+    url = https://github.com/rizzatti/dash.vim.git
