--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "dash.vim"]
     path = vim/.vim/bundle/dash.vim
     url = https://github.com/rizzatti/dash.vim.git
+[submodule "vim/.vim/bundle/vim-airline"]
+    path = vim/.vim/bundle/vim-airline
+    url = https://github.com/bling/vim-airline
