--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -138,7 +138,7 @@ client.focused_inactive  $color-background  $color-background  $color-base02  #0
 client.urgent            $color-base08      $color-base08      $color-base05  #00ff00
 
 bar {
-    status_command i3status
+    status_command i3status -c ~/.config/i3/i3status.conf
     separator_symbol " / "
     colors {
         background $color-background
@@ -168,7 +168,7 @@ bindsym $mod+Shift+c reload
 # Restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # Exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -f 'pango:Source Code Pro for Powerline 16' -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+XF86PowerOff exit
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume $audio-sink-name +5% #increase sound volume
