--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -20,11 +20,14 @@ set $color-base0F #a3685a
 set $wallpaper-file "~/pictures/wallpaper"
 set $screensaver-file "~/pictures/screensaver"
 
+set $font-family Noto Sans
+set $font-size 8
+
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Noto Sans 14
+font pango:$font-family $font-size
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -163,7 +166,7 @@ bindsym $mod+Shift+q kill
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -fn '$font-family:size=$font-size'"
 
 # Reload the configuration file
 bindsym $mod+Shift+c reload
