--- a/x/.xserverrc
+++ b/x/.xserverrc
@@ -1,4 +1,5 @@
 #!/bin/sh
+DPI=160
 KEY_REPEAT_DELAY=200
 KEY_REPEAT_INTERVAL=40
-exec /usr/bin/X -nolisten tcp -ardelay $KEY_REPEAT_DELAY -arinterval $KEY_REPEAT_INTERVAL "$@"
+exec /usr/bin/X -nolisten tcp -ardelay $KEY_REPEAT_DELAY -arinterval $KEY_REPEAT_INTERVAL -dpi $DPI "$@"
