--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -186,8 +186,8 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-mute @DEFAULT_S
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # Screen brightness controls
-bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5 -time 1
-bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5 -time 1
+bindsym XF86MonBrightnessUp exec --no-startup-id light -s gmux_backlight -A 5
+bindsym XF86MonBrightnessDown exec --no-startup-id light -s gmux_backlight -U 5
 
 # Keyboard brightness controls
 bindsym XF86KbdBrightnessUp exec --no-startup-id kbdlight up 5%
