--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -6,30 +6,21 @@ general {
     interval = 5
 }
 
-order += "wireless _first_"
+order += "ethernet _first_"
 order += "run_watch VPN"
 order += "volume master"
-order += "battery 0"
 order += "load"
 order += "tztime local"
 
-wireless _first_ {
-    format_up = " (%quality at %essid) %ip"
-    format_down = "  down"
+ethernet _first_ {
+    format_up = " %ip"
+    format_down = " down"
 }
 
 volume master {
     device = "pulse"
     format = " %volume"
     format_muted = "  x"
-}
-
-battery 0 {
-    format = "%status  %percentage  %remaining"
-    format_down = "No battery"
-    status_bat = ""
-    status_full = ""
-    integer_battery_capacity = true
 }
 
 run_watch VPN {
