--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -161,7 +161,7 @@ bar {
 }
 
 # Start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
 
 # Kill focused window
 bindsym $mod+Shift+q kill
