--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -25,7 +25,7 @@ set $color-base0F #a3685a
 set $wallpaper-file "~/pictures/wallpaper"
 set $screensaver-file "~/pictures/screensaver"
 
-set $font-family Noto Sans
+set $font-family Source Code Pro for Powerline
 set $font-size 7
 
 set $mod Mod4
@@ -149,7 +149,7 @@ client.urgent            $color-base08      $color-base08      $color-base05  #0
 
 bar {
     status_command i3status -c ~/.config/i3/i3status.conf
-    separator_symbol " / "
+    separator_symbol "/"
     colors {
         background $color-background
         # Bar colors
@@ -166,12 +166,8 @@ bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
 # Kill focused window
 bindsym $mod+Shift+q kill
 
-# Start dmenu (a program launcher)
-#bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -fn '$font-family:size=$font-size'"
+# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -fn '$font-family:size=$font-size'"
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="rofi -dmenu -fuzzy -p 'Run: '"
 
 # Reload the configuration file
 bindsym $mod+Shift+c reload
