--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -30,6 +30,8 @@ battery 0 {
     status_bat = ""
     status_full = ""
     integer_battery_capacity = true
+    last_full_capacity = true
+    hide_seconds = true
 }
 
 run_watch VPN {
