--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -27,7 +27,7 @@ volume master {
 battery 0 {
     format = "%status %percentage %remaining"
     format_down = "No battery"
-    status_bat = ""
+    status_bat = ""
     status_full = ""
     integer_battery_capacity = true
     last_full_capacity = true
