VPN status with i3status.

--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -7,37 +7,52 @@ general {
 }
 
 order += "wireless _first_"
-order += "run_watch VPN"
+order += "run_watch PrivateVPN"
+order += "run_watch HomeVPN"
+order += "run_watch WorkVPN"
 order += "volume master"
 order += "battery 0"
 order += "load"
 order += "tztime local"
 
 wireless _first_ {
-    format_up = " (%quality at %essid) %ip"
+    format_up = "  %essid %quality %ip"
     format_down = "  down"
 }
 
 volume master {
     device = "pulse"
     format = " %volume"
-    format_muted = "  x"
+    format_muted = " -"
 }
 
 battery 0 {
     format = "%status %percentage %remaining"
     format_down = "No battery"
-    status_bat = ""
-    status_full = ""
+    status_bat = "  "
+    status_chr = "  "
+    status_full = "  "
     integer_battery_capacity = true
     last_full_capacity = true
     hide_seconds = true
 }
 
-run_watch VPN {
-    pidfile = "/var/run/vpnc/pid"
+run_watch PrivateVPN {
+    pidfile = "/var/run/openvpn@private_*.pid"
     format = ""
     format_down = ""
+}
+
+run_watch HomeVPN {
+    pidfile = "/var/run/openvpn@home.pid"
+    format = ""
+    format_down = ""
+}
+
+run_watch WorkVPN {
+    pidfile = "/var/run/openvpn@work_*.pid"
+    format = ""
+    format_down = ""
 }
 
 load {
