--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -190,12 +190,15 @@ bindsym XF86KbdBrightnessUp exec --no-startup-id kbdlight up 5%
 bindsym XF86KbdBrightnessDown exec --no-startup-id kbdlight down 5%
 
 # Media player controls
+bindsym XF86AudioStop exec --no-startup-id playerctl stop
 bindsym XF86AudioPlay exec --no-startup-id playerctl play
 bindsym XF86AudioPause exec --no-startup-id playerctl pause
 bindsym XF86AudioNext exec --no-startup-id playerctl next
 bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
 # Screenshot keys
+bindsym Print exec --no-startup-id maim -s --format png /dev/stdout | xclip -t image/png -sel clip
+bindsym Shift+Print exec --no-startup-id maim --format png /dev/stdout | xclip -t image/png -sel clip
 bindsym XF86LaunchA exec --no-startup-id maim -s --format png /dev/stdout | xclip -t image/png -sel clip
 bindsym XF86LaunchB exec --no-startup-id maim --format png /dev/stdout | xclip -t image/png -sel clip
 
