--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -161,7 +161,7 @@ bar {
 }
 
 # Start a terminal
-bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
+bindsym $mod+Return exec --no-startup-id ~/.config/i3/shell.sh
 
 # Kill focused window
 bindsym $mod+q kill
@@ -191,8 +191,8 @@ bindsym XF86KbdBrightnessDown exec --no-startup-id kbdlight down 5%
 
 # Media player controls
 bindsym XF86AudioStop exec --no-startup-id playerctl stop
-bindsym XF86AudioPlay exec --no-startup-id playerctl play
-bindsym XF86AudioPause exec --no-startup-id playerctl pause
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+bindsym XF86AudioPause exec --no-startup-id playerctl play-pause
 bindsym XF86AudioNext exec --no-startup-id playerctl next
 bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
