--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -2,6 +2,7 @@
 allow_bold = false
 font = Source Code Pro for Powerline 9
 cursor_blink = off
+scrollback_lines = 65536
 
 [colors]
 foreground = #c5c8c6
