--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -6,10 +6,10 @@ general {
     interval = 5
 }
 
-order += "wireless _first_"
-order += "run_watch PrivateVPN"
-order += "run_watch HomeVPN"
-order += "run_watch WorkVPN"
+#order += "wireless _first_"
+#order += "run_watch PrivateVPN"
+#order += "run_watch HomeVPN"
+#order += "run_watch WorkVPN"
 order += "volume master"
 order += "battery 0"
 order += "load"
