--- a/neovim/.ideavimrc
+++ b/neovim/.ideavimrc
@@ -1,1 +1,5 @@
 source ~/.config/nvim/init.vim
+map <C-p> :action GotoFile<CR>
+map <leader>a :action GotoRelated<CR>
+map <leader>k :action CommentByLineComment<CR>
+map <leader>t :action ActivateTerminalToolWindow<CR>
