--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -51,3 +51,8 @@
 [user]
     name = Mikołaj Siedlarek
     email = mikolaj@siedlarek.pl
+[filter "lfs"]
+    process = git-lfs filter-process
+    required = true
+    clean = git-lfs clean -- %f
+    smudge = git-lfs smudge -- %f
