Updated tmux config.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,16 +1,38 @@
-# Change terminal identification
-set -g default-terminal "screen-256color"
+# Change prefix to Ctrl+A.
+set -g prefix C-a
+unbind C-b
 
-# Disable mouse support
-set -g mode-mouse off
+# Use Vi keybindings in copy mode.
+set -g mode-keys vi
 
-# Change action sequence from C-b to C-a
-set-option -g prefix C-a
+# Use Vi keybindings for selection and copying.
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
-# Set status bar style
-set -g status-bg colour232
-set -g status-fg white
-set-window-option -g window-status-current-bg colour234
+# Enable mouse scrolling and copying.
+set -g mouse on
 
-# Enable cool terminal native scrolling
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+# Do not copy automatically with mouse selection.
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
+# Set scroll speed.
+bind -T copy-mode-vi WheelUpPane send -N1 -X scroll-up
+bind -T copy-mode-vi WheelDownPane send -N1 -X scroll-down
+
+# Set number of lines kept in history per pane.
+set -g history-limit 64000
+
+# Send copied text to clipboard through terminal escape sequences.
+set -g set-clipboard on
+
+# See https://gist.github.com/yudai/95b20e3da66df1b066531997f982b57b
+#set-option -ag terminal-overrides ",xterm-256color:Ms=\\E]52;c;%p2%s\\7"
+
+# Set status bar colors.
+set -g default-terminal "xterm-256color"
+set -g status-bg colour236
+set -g status-fg colour7
+
+# Set status bar content.
+set-option -g status-right "#h | %H:%M %Z"
+set -g status-right-length 50
