--- a/neovim/.config/nvim/pack/plugins/opt/gitsigns/.github/workflows/ci.yml
+++ b/neovim/.config/nvim/pack/plugins/opt/gitsigns/.github/workflows/ci.yml
@@ -15,23 +15,55 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  commit_lint:
+    runs-on: ubuntu-latest
+    steps:
+      # Check commit messages
+      - uses: webiny/action-conventional-commits@v1.0.5
+
   # This workflow contains a single job called "build"
   build:
     strategy:
       fail-fast: true
       matrix:
-        neovim_branch: ['v0.5.0', 'master']
+        neovim_branch: ['v0.7.2', 'v0.8.0', 'nightly']
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
       NEOVIM_BRANCH: ${{ matrix.neovim_branch }}
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      - name: Setup build dependencies
+      - name: Install LuaJIT
+        uses: leafo/gh-actions-lua@v9
+        with:
+          luaVersion: "luajit-2.1.0-beta3"
+
+      - name: Install Luarocks
+        uses: leafo/gh-actions-luarocks@v4
+
+      - name: Get Neovim SHA
+        id: get-nvim-sha
+        run: |
+          echo "::set-output name=sha::$(git ls-remote https://github.com/neovim/neovim ${{env.NEOVIM_BRANCH}} | cut -f1)"
+
+      - name: Cache Deps
+        id: cache-deps
+        uses: actions/cache@v2
+        with:
+          path: deps
+          key: build-1-${{ steps.get-nvim-sha.outputs.sha }}
+
+      - name: Install Lua Deps
+        run: make lua_deps
+
+      - name: Check lua files are built from latest teal
+        run: make tl-ensure
+
+      - name: Install Neovim build dependencies
+        if: steps.cache-deps.outputs.cache-hit != 'true'
         run: |
           sudo apt update &&
           sudo apt install -y \
@@ -41,40 +73,16 @@ jobs:
             g++ \
             gettext \
             gperf \
-            libjemalloc-dev \
-            libluajit-5.1-dev \
-            libmsgpack-dev \
-            libtermkey-dev \
             libtool \
             libtool-bin \
-            libunibilium-dev \
-            libvterm-dev \
             lua-bitop \
-            lua-lpeg \
-            lua-mpack \
             ninja-build \
             pkg-config \
             unzip
 
-      - uses: leafo/gh-actions-lua@v8
-        with:
-          luaVersion: "luajit-2.1.0-beta3"
-      - uses: leafo/gh-actions-luarocks@v4
-
-      - name: Install teal
-        run: luarocks install tl 0.13.2
-
-      - name: Check lua files are built from latest teal
-        run: make tl-ensure
-
-      - name: Cache neovim
-        uses: actions/cache@v2
-        with:
-          path: deps/neovim
-          key: build-${{env.NEOVIM_BRANCH}}
-
       - name: Build Neovim
-        run: make deps/neovim NEOVIM_BRANCH=$NEOVIM_BRANCH
+        if: steps.cache-deps.outputs.cache-hit != 'true'
+        run: make test_deps NEOVIM_BRANCH=$NEOVIM_BRANCH
 
       - name: Run Test
         run: make test
