--- a/neovim/.config/nvim/pack/plugins/opt/neo_tree/.github/workflows/ci.yml
+++ b/neovim/.config/nvim/pack/plugins/opt/neo_tree/.github/workflows/ci.yml
@@ -19,7 +19,8 @@ jobs:
       uses: JohnnyMorganz/stylua-action@1.0.0
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        args: --glob '*.lua' --glob '!defaults.lua' --check lua 
+        version: v0.13.1
+        args: --color always --check lua/
 
   plenary-tests:
     runs-on: ubuntu-20.04
@@ -40,11 +41,33 @@ jobs:
             chmod +x nvim.appimage
             mv nvim.appimage ./build/nvim
           }
-          git clone https://github.com/MunifTanjim/nui.nvim ~/.local/share/nvim/site/pack/vendor/start/nui.nvim
-          git clone --depth 1 https://github.com/nvim-lua/plenary.nvim ~/.local/share/nvim/site/pack/vendor/start/plenary.nvim
-          ln -s $(pwd) ~/.local/share/nvim/site/pack/vendor/start
+
+      - name: Get Luver Cache Key
+        id: luver-cache-key
+        env:
+          CI_RUNNER_OS: ${{ runner.os }}
+        run: |
+          echo "::set-output name=value::${CI_RUNNER_OS}-luver-v1-$(date -u +%Y-%m-%d)"
+        shell: bash
+      - name: Setup Luver Cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.local/share/luver
+          key: ${{ steps.luver-cache-key.outputs.value }}
+      - name: Setup Lua
+        uses: MunifTanjim/luver-action@v1
+        with:
+          default: 5.1.5
+          lua_versions: 5.1.5
+          luarocks_versions: 5.1.5:3.8.0
+      - name: Setup luacov
+        run: |
+          luarocks install luacov
 
       - name: Run tests
         run: |
             export PATH="${PWD}/build/:${PATH}"
-            make test
+            ./scripts/test.sh
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
