--- a/neovim/.config/nvim/pack/plugins/opt/nui/.github/workflows/ci.yml
+++ b/neovim/.config/nvim/pack/plugins/opt/nui/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Check Format
         uses: JohnnyMorganz/stylua-action@1.0.0
         with:
-          version: 0.11.2
+          version: 0.13.1
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --color always --check lua/
 
@@ -83,16 +83,9 @@ jobs:
         uses: MunifTanjim/setup-neovim-action@v1
         with:
           tag: nightly
-      - name: Prepare Neovim
+      - name: Run Tests
         run: |
           nvim --version
-
-          git clone https://github.com/nvim-lua/plenary.nvim ~/.local/share/nvim/site/pack/vendor/start/plenary.nvim
-          # this commit broke luacov
-          git -C ~/.local/share/nvim/site/pack/vendor/start/plenary.nvim revert --no-commit 9069d14a120cadb4f6825f76821533f2babcab92
-
-          ln -s $(pwd) ~/.local/share/nvim/site/pack/vendor/start
-      - name: Run Tests
-        run: ./scripts/test.sh
+          ./scripts/test.sh
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
